force-app/main/default/objects/Contact/fields/ContactStatusDetails__c.field-meta.xml
<CustomField>
    <fullName>ContactStatusDetails__c</fullName>
    <label>取引先責任者状況詳細（IS）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>活動せず活動終了</fullName>
            </value>
            <value>
                <fullName>接続せず活動終了</fullName>
            </value>
            <value>
                <fullName>顧客からのNG</fullName>
            </value>
            <value>
                <fullName>連絡不可</fullName>
            </value>
            <value>
                <fullName>アポ獲得</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>