force-app/main/default/objects/Contact/fields/ContactStatusIS__c.field-meta.xml
<CustomField>
    <fullName>ContactStatusIS__c</fullName>
    <label>取引先責任者対応状況（IS）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未着手</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>対応終了</fullName>
            </value>
            <value>
                <fullName>対応保留</fullName>
            </value>
            <value>
                <fullName>取引開始済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>