force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>pardotのマッピングを行うため標準項目ではなく本項目を使用する</description>
    <label>部署</label>
    <length>100</length>
    <type>Text</type>
</CustomField>