force-app/main/default/objects/Contact/fields/FailureCause__c.field-meta.xml
<CustomField>
    <fullName>FailureCause__c</fullName>
    <label>失注理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>