force-app/main/default/objects/Contact/fields/IntroductionOtherCompanyService__c.field-meta.xml
<CustomField>
    <fullName>IntroductionOtherCompanyService__c</fullName>
    <label>導入他社サービス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>