force-app/main/default/objects/Contact/fields/ISEnd__c.field-meta.xml
<CustomField>
    <fullName>ISEnd__c</fullName>
    <label>IS対応終了変更日時</label>
    <type>DateTime</type>
</CustomField>