force-app/main/default/objects/Contact/fields/JobCategory__c.field-meta.xml
<CustomField>
    <fullName>JobCategory__c</fullName>
    <label>職種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>経営者</fullName>
            </value>
            <value>
                <fullName>企画</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>総務</fullName>
            </value>
            <value>
                <fullName>法務</fullName>
            </value>
            <value>
                <fullName>経理</fullName>
            </value>
            <value>
                <fullName>人事</fullName>
            </value>
            <value>
                <fullName>情報システム</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>