force-app/main/default/objects/Contact/fields/LeadCustomerStage__c.field-meta.xml
<CustomField>
    <fullName>LeadCustomerStage__c</fullName>
    <label>リード顧客ステージ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage0　未接触</fullName>
            </value>
            <value>
                <fullName>Stage1　接触 but 商談NG</fullName>
            </value>
            <value>
                <fullName>Stage2　商談 but ネタ以下</fullName>
            </value>
            <value>
                <fullName>Stage3　ヨミ以上</fullName>
            </value>
            <value>
                <fullName>Stage4　受注</fullName>
            </value>
            <value>
                <fullName>Stage5　受注後解約</fullName>
            </value>
            <value>
                <fullName>未フォロー</fullName>
            </value>
            <value>
                <fullName>要育成</fullName>
            </value>
            <value>
                <fullName>フォロー終了</fullName>
            </value>
            <value>
                <fullName>日程調整中</fullName>
            </value>
            <value>
                <fullName>商談化</fullName>
            </value>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>取引NG</fullName>
            </value>
            <value>
                <fullName>重複データ(新)</fullName>
            </value>
            <value>
                <fullName>競合のためフォロー終了</fullName>
            </value>
            <value>
                <fullName>未コンタクト</fullName>
            </value>
            <value>
                <fullName>フォロー中</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
            <value>
                <fullName>コール対象</fullName>
            </value>
            <value>
                <fullName>01_MAL</fullName>
            </value>
            <value>
                <fullName>08_セルフサーブ01_MAL</fullName>
            </value>
            <value>
                <fullName>08_セルフサーブ03_SAL</fullName>
            </value>
            <value>
                <fullName>08_セルフサーブ04_SQL</fullName>
            </value>
            <value>
                <fullName>08_セルフサーブ06_デッドエンド</fullName>
            </value>
            <value>
                <fullName>パートナー企業</fullName>
                <isActive>false</isActive>
                <label>パートナー企業</label>
            </value>
            <value>
                <fullName>代理店がフォロー中</fullName>
                <isActive>false</isActive>
                <label>代理店がフォロー中</label>
            </value>
            <value>
                <fullName>代理店受注</fullName>
                <isActive>false</isActive>
                <label>代理店受注</label>
            </value>
            <value>
                <fullName>別部署で利用中</fullName>
                <isActive>false</isActive>
                <label>別部署で利用中</label>
            </value>
            <value>
                <fullName>商談前に競合で意思決定</fullName>
                <isActive>false</isActive>
                <label>商談前に競合で意思決定</label>
            </value>
            <value>
                <fullName>新機能求む</fullName>
                <isActive>false</isActive>
                <label>新機能求む</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>