force-app/main/default/objects/Contact/fields/LegalWorkWorkers__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkers__c</fullName>
    <label>法務従事者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法務従事者</fullName>
            </value>
            <value>
                <fullName>法務従事者以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>