force-app/main/default/objects/Contact/fields/LegalWorkWorkersCount__c.field-meta.xml
<CustomField>
    <fullName>LegalWorkWorkersCount__c</fullName>
    <label>法務従事者人数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1名</fullName>
            </value>
            <value>
                <fullName>2名-4名</fullName>
            </value>
            <value>
                <fullName>5名-10名</fullName>
            </value>
            <value>
                <fullName>10名以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>