force-app/main/default/objects/Contact/fields/OppStatusBLC__c.field-meta.xml
<CustomField>
    <fullName>OppStatusBLC__c</fullName>
    <formula>Account.OppStatusBLC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談状況（BLC）</label>
    <type>Text</type>
</CustomField>