force-app/main/default/objects/Contact/fields/OppStatusBLL__c.field-meta.xml
<CustomField>
    <fullName>OppStatusBLL__c</fullName>
    <formula>Account.OppStatusBLL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談状況（BLL）</label>
    <type>Text</type>
</CustomField>