force-app/main/default/objects/Contact/fields/OppStatusOther__c.field-meta.xml
<CustomField>
    <fullName>OppStatusOther__c</fullName>
    <formula>Account.OppStatusOther__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談状況（それ以外）</label>
    <type>Text</type>
</CustomField>