force-app/main/default/objects/Contact/fields/PersonalityCareer__c.field-meta.xml
<CustomField>
    <fullName>PersonalityCareer__c</fullName>
    <label>人柄・経歴</label>
    <length>100</length>
    <type>Text</type>
</CustomField>