force-app/main/default/objects/Contact/fields/RemarksField__c.field-meta.xml
<CustomField>
    <fullName>RemarksField__c</fullName>
    <label>備考欄</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>