force-app/main/default/objects/Contact/fields/ScoreBLL__c.field-meta.xml
<CustomField>
    <fullName>ScoreBLL__c</fullName>
    <label>スコア_BLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>