force-app/main/default/objects/Contact/fields/Superior__c.field-meta.xml
<CustomField>
    <fullName>Superior__c</fullName>
    <formula>IF( OwnerId == &apos;0055F000006q1lh&apos;,&apos;乾美菜子&apos;,IF(Owner.Manager2__c == null , Owner.Manager3__r.Alias , Owner.Manager2__r.Alias ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>上長</label>
    <type>Text</type>
</CustomField>