force-app/main/default/objects/Contact/fields/SuperiorEmail__c.field-meta.xml
<CustomField>
    <fullName>SuperiorEmail__c</fullName>
    <formula>IF( OwnerId == &apos;0055F000006q1lh&apos;,&apos;inui@bengo4.com&apos;, IF( Owner.Manager2__c == null , Owner.Manager3__r.Email , Owner.Manager2__r.Email ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>上長メール</label>
    <type>Text</type>
</CustomField>