force-app/main/default/objects/Contact/fields/TradingTargetType__c.field-meta.xml
<CustomField>
    <fullName>TradingTargetType__c</fullName>
    <formula>text(Account.Type)</formula>
    <label>取引先種別</label>
    <type>Text</type>
</CustomField>