force-app/main/default/objects/Contact/fields/TrafficSourceLP__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceLP__c</fullName>
    <label>流入経路_LP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法人問合せフォーム</fullName>
            </value>
            <value>
                <fullName>サービス利用者問合せフォーム</fullName>
            </value>
            <value>
                <fullName>library001</fullName>
            </value>
            <value>
                <fullName>library002</fullName>
            </value>
            <value>
                <fullName>library003</fullName>
            </value>
            <value>
                <fullName>library004</fullName>
            </value>
            <value>
                <fullName>/lib/about</fullName>
            </value>
            <value>
                <fullName>/static/blcomp</fullName>
            </value>
            <value>
                <fullName>/static/translation</fullName>
            </value>
            <value>
                <fullName>直接フォーム_BLL</fullName>
            </value>
            <value>
                <fullName>直接フォーム_BLC</fullName>
            </value>
            <value>
                <fullName>インボイス対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>