force-app/main/default/objects/Contact/fields/TrafficSourceMediaDetail__c.field-meta.xml
<CustomField>
    <fullName>TrafficSourceMediaDetail__c</fullName>
    <label>流入経路_媒体詳細</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Criteo</fullName>
            </value>
            <value>
                <fullName>BLサイト</fullName>
            </value>
            <value>
                <fullName>TETORI</fullName>
            </value>
            <value>
                <fullName>サンクスメール</fullName>
            </value>
            <value>
                <fullName>WP</fullName>
            </value>
            <value>
                <fullName>記事バナー</fullName>
            </value>
            <value>
                <fullName>X(Twitter)</fullName>
            </value>
            <value>
                <fullName>広告イベントアーカイブ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>インボイス対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>