force-app/main/default/objects/Contact/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <formula>$User.Id</formula>
    <label>ユーザID</label>
    <type>Text</type>
</CustomField>